--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
@@ -17,9 +18,9 @@
 
     <!-- Header -->
     <header class="header">
+      <div class="container header-container">
       <nav class="nav">
-        <a href="./index.html" class="logo-link link">WEB
-          <span class="link-studio">Studio</span></a
+        <a href="./index.html" class="logo-link link">WEB<span class="link-studio">Studio</span></a
         >
         <ul class="nav-list list">
           <li>
@@ -46,42 +47,47 @@
           </li>
         </ul>
       </address>
+      </div>
     </header>
 
     <!-- Main content -->
     <main>
       <!-- Hero -->
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions<br />for Your Business</h1>
+        <div class="container hero-container">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
+        </div>
       </section>
 
+
       <!-- Our preference -->
-      <section>
-        <h2 class="preference">Our preference</h2>
+      <section class="pref-section">
+        <div class="container container-pref">
+        <h2 class="visually-hidden">Our preference</h2>
         <ul class="pref-list list">
-          <li>
+          <li class="pref-list-item">
             <h3 class="pref-title">Strategy</h3>
             <p class="pref-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="pref-list-item">
             <h3 class="pref-title">Punctuality</h3>
             <p class="pref-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="pref-list-item">
             <h3 class="pref-title">Diligence</h3>
             <p class="pref-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="pref-list-item">
             <h3 class="pref-title">Technologies</h3>
             <p class="pref-text">
               Design practice focused on digital experiences. We bring forth a
@@ -89,13 +95,15 @@
             </p>
           </li>
         </ul>
+        </div>
       </section>
 
       <!-- About us -->
       <section>
+        <div class="container about-container">
         <h2 class="about">What are we doing</h2>
         <ul class="about-list list">
-          <li>
+          <li class="about-list-item">
             <img
               src="./images/img_1.jpg"
               alt="Open project on the iMac"
@@ -103,7 +111,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="about-list-item">
             <img
               src="./images/img_2.jpg"
               alt="Open messenger in a mobile"
@@ -111,7 +119,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="about-list-item">
             <img
               src="./images/img_3.jpg"
               alt="Adapted site on a phone against the background of an open site on a laptop"
@@ -120,10 +128,12 @@
             />
           </li>
         </ul>
+        </div>
       </section>
 
       <!-- Our team -->
       <section class="our-team">
+        <div class="container team-container">
         <h2 class="team">Our Team</h2>
         <ul class="team-list list">
           <li class="team-card">
@@ -133,8 +143,10 @@
               width="264"
               height="260"
             />
+            <div class="team-item">
             <h3 class="team-name">Mark Guerrero</h3>
             <p class="team-position">Product Designer</p>
+            </div>
           </li>
           <li class="team-card">
             <img
@@ -143,8 +155,10 @@
               width="264"
               height="260"
             />
+            <div class="team-item">
             <h3 class="team-name">Tom Ford</h3>
             <p class="team-position">Frontend Developer</p>
+            </div>
           </li>
           <li class="team-card">
             <img
@@ -153,8 +167,10 @@
               width="264"
               height="260"
             />
+            <div class="team-item">
             <h3 class="team-name">Camila Garcia</h3>
             <p class="team-position">Marketing</p>
+            </div>
           </li>
           <li class="team-card">
             <img
@@ -163,22 +179,27 @@
               width="264"
               height="260"
             />
+            <div class="team-item">
             <h3 class="team-name">Daniel Wilson</h3>
             <p class="team-position">UI Designer</p>
+            </div>
           </li>
         </ul>
+        </div>
       </section>
     </main>
 
     <!-- Footer -->
     <footer class="footer">
+      <div class="container footer-container">
       <a href="./index.html" class="link"
         >Web<span class="link-web">Studio</span></a
       >
       <p class="text">
-        Increase the flow of customers and<br />sales for your business with
-        digital<br />marketing & growth solutions.
+        Increase the flow of customers and sales for your business with
+        digital marketing & growth solutions.
       </p>
+      </div>
     </footer>
   </body>
 </html>
