--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </section>
 
       <!-- About us -->
-      <section>
+      <section class="about-section">
         <div class="container about-container">
         <h2 class="about">What are we doing</h2>
         <ul class="about-list list">
