--- a/portfolio.html
+++ b/portfolio.html
@@ -105,8 +105,6 @@
               <p class="portfolio-type">App</p>
               </div>
           </li>
-        </ul>
-        <ul class="portfolio-list list">
           <li class="category-item">
             <a href="" class="link"
               ><img
@@ -149,8 +147,6 @@
               <p class="portfolio-type">Marketing</p>
               </div>
           </li>
-        </ul>
-          <ul class="portfolio-list list">
           <li class="category-item">
             <a href="" class="link"
               ><img
@@ -205,8 +201,8 @@
         >Web<span class="link-web">Studio</span></a
       >
       <p class="text">
-        Increase the flow of customers and<br />sales for your business with
-        digital<br />marketing & growth solutions.
+        Increase the flow of customers and sales for your business with
+        digital marketing & growth solutions.
       </p>
       </div>
     </footer>
